<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yuzuko Tokei</string>
    <string name="app_description" />
    <string name="ok">OK</string>
    <string name="service_started">Yuzuko Tokei started.</string>
    <string name="service_stopped">Yuzuko Tokei stopped.</string>
    <string name="enable">Enable</string>
    <string name="testplay">Voice test</string>
    <string name="preferences">Preferences</string>
    <string name="about">About Yuzuko Tokei</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_to">yh1224%2Borange@gmail.com</string>
    <string name="button_min_ems">8</string>
    <string name="media_volume_zero">Please increase Media volume to play voice.</string>
    <string name="pref_title">Configuration</string>
    <string name="pref_enable_title">Speech</string>
    <string name="pref_enable_summary">Enable speaking clock.</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary">Notify with vibration.</string>
    <string name="pref_period_title">Speech period</string>
    <string name="pref_period_summary">Speech interval</string>
    <string name="pref_hours_title">Hours</string>
    <string name="pref_hours_summary">Specify speech time.</string>
    <string name="pref_hours_suffix">&#x00a0;o&#8216;clock</string>
    <string name="pref_volume_title">Volume</string>
    <string name="pref_volume_summary">Adjust speech volume. Actual volume depends on Media volume.</string>
    <string name="pref_volume_useringvolume">Use ring volume</string>
    <string name="pref_notificationicon_title">Show Notification Icon</string>
    <string name="pref_notificationicon_summary">Show icon on notification bar.</string>
    <string name="period_eachhour">every hour</string>
    <string name="period_each30min">every 30 min.</string>
</resources>
